<resources>
    <string name="app_name">Space Infinity - All About Space</string>
    <string name="app_short">Space Infinity</string>
    <string name="app_suffix">All About Space</string>
    <string name="credits">Credits: NASA</string>
    <string name="version">App version: 2.4.6</string>

    <string name="funny">Searching for alien life…</string>

    <string name="apod">APOD - Astronomy Picture of the Day</string>
    <string name="images">Image Gallery</string>
    <string name="iss">ISS Now</string>
    <string name="facts">Space Facts</string>
    <string name="wiki">Encyclopedia</string>
    <string name="voyager">Voyager</string>
    <string name="astronauts">Astronauts</string>
    <string name="rockets">Rockets</string>
    <string name="news_feed">News Feed</string>
    <string name="launch_sites">Launch Sites</string>
    <string name="rocket_launches">Rocket Launches</string>
    <string name="spacex_roadster">SpaceX Roadster</string>

    <string name="spacex_roadster_error">There is a problem receiving SpaceX Roadster data. Please try again. :(</string>

    <string name="iss_live">Live stream</string>
    <string name="loading">Loading…</string>
    <string name="exit">Press again to exit</string>
    <string name="info">About</string>
    <string name="title_activity_demo">Demo</string>
    <string name="date">Date:</string>
    <string name="author">Author:</string>
    <string name="download">Downloading Image…</string>
    <string name="download_complete">Download completed!</string>
    <string name="iss_pass">When will ISS pass by my location?</string>
    <string name="velocity">Velocity</string>
    <string name="altitude">Altitude</string>
    <string name="rocket_info">Rocket Info</string>
    <string name="payload_info">Payload Info</string>
    <string name="iss_pass_result">ISS will pass through your sky on </string>
    <string name="searchk">search ex: apollo, orion etc</string>
    <string name="searchf">Search some facts</string>
    <string name="search_error">Insert a word for searching</string>
    <string name="favs">Favorites</string>
    <string name="planets">Planets</string>
    <string name="moons">Moons</string>
    <string name="galaxies">Galaxies</string>
    <string name="stars">Stars</string>
    <string name="name">Name:</string>
    <string name="description">Description</string>
    <string name="diameter">Diameter:</string>
    <string name="mass">Mass:</string>
    <string name="moon">Moons:</string>
    <string name="orbits">Orbits:</string>
    <string name="orbitd">Orbit Distance:</string>
    <string name="orbitp">Orbit Period:</string>
    <string name="surfacet">Surface Temperature:</string>
    <string name="firstrec">First Recorded:</string>
    <string name="recby">Recorded By:</string>
    <string name="quickfacts">Facts</string>
    <string name="imagess">Images</string>
    <string name="designation">Designation:</string>
    <string name="distance">Distance:</string>
    <string name="constellation">Constellation:</string>
    <string name="galaxy_group">Galaxy Group:</string>
    <string name="galaxy_type">Galaxy Type:</string>
    <string name="number_of_stars">Number of Stars:</string>
    <string name="age">Age:</string>
    <string name="star_type">Type:</string>
    <string name="detailed_info">Detailed Information</string>
    <string name="search_result">Search Result</string>
    <string name="about">About</string>
    <string name="no_facts">No space facts here</string>
    <string name="filter">Filter</string>
    <string name="press">Press here to view it</string>
    <string name="share">Share</string>
    <string name="rating">Rating</string>
    <string name="isserror">Please enable location access</string>
    <string name="try_also">Try Also</string>
    <string name="space_now">Space Now</string>
    <string name="summary">Summary</string>
    <string name="telemetry">Telemetry</string>
    <string name="crew">Crew</string>
    <string name="try_again">Try again</string>
    <string name="details">Details</string>
    <string name="see_on_wikipedia">See on wikipedia</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="missions">Missions</string>
    <string name="rocket">Rocket</string>
    <string name="see_more">See more</string>
    <string name="experience">Experience</string>
    <string name="info_facts">Facts</string>
    <string name="follow_on_twitter">Follow on Twitter</string>
    <string name="all_facts">All Space Facts</string>
    <string name="fav_facts">Favorites Space Facts</string>
    <string name="days">days</string>
    <string name="clock_dots">:</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="watch">Watch</string>
    <string name="notify">Rocket Launches Notifications</string>
    <string name="settings">Settings</string>
    <string name="zz">00</string>
    <string name="skip">Skip</string>
    <string name="intro">Intro</string>
    <string name="finish">Start</string>
    <string name="intro1_title">Space Rocket Launches</string>
    <string name="intro1_content">Follow and read informations about all launches</string>
    <string name="intro2_title">ISS Live</string>
    <string name="intro2_content">Watch ISS live position and stream</string>
    <string name="intro3_title">Encyclopedia and Gallery</string>
    <string name="intro3_content">Find out more about our solar system</string>
    <string name="intro4_title">Explore</string>
    <string name="intro4_content">Start your exploration now</string>
</resources>
