<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent"
    tools:context=".view.activity.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="?attr/actionBarSize"
        android:alpha="0.2"
        android:background="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <Button
            android:id="@+id/intro_btn_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:textColor="@color/white"
            android:text="@string/skip" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/intro"
                android:id="@+id/intro_indicator_0"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/indicator_selected" />
            <ImageView
                android:contentDescription="@string/intro"
                android:id="@+id/intro_indicator_1"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/indicator_unselected" />
            <ImageView
                android:contentDescription="@string/intro"
                android:id="@+id/intro_indicator_2"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/indicator_unselected" />
            <ImageView
                android:contentDescription="@string/intro"
                android:id="@+id/intro_indicator_3"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/indicator_unselected" />

        </LinearLayout>

        <Button
            android:id="@+id/intro_btn_finish"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/intro_btn_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24px"
            android:contentDescription="@string/intro" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>