<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SpaceXActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.Toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:transitionName="image"
            android:src="@drawable/menu_roadster"
            android:scaleType="centerCrop"
            android:contentDescription="@string/spacex_roadster"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <include
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            layout="@layout/progress_bar" />

        <LinearLayout
            android:id="@+id/error"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textColor="@color/white"
                android:text="@string/spacex_roadster_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="retry"
                android:text="@string/try_again"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:visibility="gone"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:text="@string/details"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="4dp"
                    android:id="@+id/details"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.CardView
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="4dp"
                    app:contentPaddingLeft="16dp"
                    app:contentPaddingRight="16dp"
                    app:contentPaddingTop="8dp"
                    app:contentPaddingBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:drawableStart="@drawable/icons8globe24"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorAccent"
                            android:drawablePadding="8dp"
                            android:textSize="14sp"
                            android:id="@+id/earth_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="4dp"
                            android:drawableStart="@drawable/icons8scifi24"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorAccent"
                            android:drawablePadding="8dp"
                            android:textSize="14sp"
                            android:id="@+id/mars_distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_marginTop="4dp"
                            android:drawableStart="@drawable/icons8speed24"
                            android:gravity="center_vertical"
                            android:textColor="@color/colorAccent"
                            android:drawablePadding="8dp"
                            android:id="@+id/speed"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/updated_at"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_marginTop="8dp"
                    android:id="@+id/wikipedia"
                    android:textSize="14sp"
                    android:drawableStart="@drawable/viewdetailsw"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/see_more"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>